fixes layouting alignment

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8025,5 +8025,5 @@ body.lang-ja .wt-loginfooterinfo a + a:before {
 }
 
 .halfWidth{
-	width:49%;
+	width:48%;
 }
